--- a/less/glyphicons.less
+++ b/less/glyphicons.less
@@ -9,18 +9,15 @@
 // Import the fonts
 @font-face {
   font-family: @custom-icon-font-family-name;
-  src: url('@{custom-icon-font-path}@{custom-icon-font-name}.eot');
-  src: url('@{custom-icon-font-path}@{custom-icon-font-name}.eot?#iefix') format('embedded-opentype'),
-  url('@{custom-icon-font-path}@{custom-icon-font-name}.woff2') format('woff2'), url('@{custom-icon-font-path}@{custom-icon-font-name}.woff') format('woff'), url('@{custom-icon-font-path}@{custom-icon-font-name}.ttf') format('truetype'), url('@{custom-icon-font-path}@{custom-icon-font-name}.svg#@{custom-icon-font-svg-id}') format('svg');
+  src: url("@{custom-icon-font-path}@{custom-icon-font-name}.eot");
+  src: url("@{custom-icon-font-path}@{custom-icon-font-name}.eot?#iefix") format('embedded-opentype'), url("@{custom-icon-font-path}@{custom-icon-font-name}.woff2") format('woff2'), url("@{custom-icon-font-path}@{custom-icon-font-name}.woff") format('woff'), url("@{custom-icon-font-path}@{custom-icon-font-name}.ttf") format('truetype'), url("@{custom-icon-font-path}@{custom-icon-font-name}.svg#@{custom-icon-font-svg-id}") format('svg');
 }
 // Import the fonts
 // <a href="#"><span class="glyphicon glyphicon-star"></span> Star</a>
 @font-face {
   font-family: 'Glyphicons Halflings';
-  src: url('@{icon-font-path}@{icon-font-name}.eot');
-  src: url('@{icon-font-path}@{icon-font-name}.eot?#iefix') format('embedded-opentype'), url('@{icon-font-path}@{icon-font-name}.woff2') format('woff2'),
-  url('@{icon-font-path}@{icon-font-name}.woff') format('woff'),
-  url('@{icon-font-path}@{icon-font-name}.ttf') format('truetype'), url('@{icon-font-path}@{icon-font-name}.svg#@{icon-font-svg-id}') format('svg');
+  src: url("@{icon-font-path}@{icon-font-name}.eot");
+  src: url("@{icon-font-path}@{icon-font-name}.eot?#iefix") format('embedded-opentype'), url("@{icon-font-path}@{icon-font-name}.woff2") format('woff2'), url("@{icon-font-path}@{icon-font-name}.woff") format('woff'), url("@{icon-font-path}@{icon-font-name}.ttf") format('truetype'), url("@{icon-font-path}@{icon-font-name}.svg#@{icon-font-svg-id}") format('svg');
 }
 // Catchall baseclass
 
@@ -1650,10 +1647,46 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+// Social icons to use anywhere
+
+.social-icons {
+  .list-inline;
+
+  .icon {
+    width: 31px;
+    height: 31px;
+    font-size: 30px;
+    background-color: @gray-999;
+    color: @white-color;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  @media (max-width: @screen-xs) {
+    li {
+      padding-top: 5px;
+    }
+  }
+
+  a {
+    display: inline-block;
+    text-decoration: none;
+
+    &:hover {
+      color: transparent;
+    }
+  }
+}
 
 .icon-facebook {
   &:before {
     content: @icon-facebook;
+  }
+
+  &:hover {
+    background-color: #3e5a98;
   }
 }
 
@@ -1661,11 +1694,19 @@
   &:before {
     content: @icon-futurity;
   }
+
+  &:hover {
+    background-color: #f7ba20;
+  }
 }
 
 .icon-instagram {
   &:before {
     content: @icon-instagram;
+  }
+
+  &:hover {
+    background-color: #3e5a98;
   }
 }
 
@@ -1673,11 +1714,19 @@
   &:before {
     content: @icon-twitter;
   }
+
+  &:hover {
+    background-color: #2ca8df;
+  }
 }
 
 .icon-rss {
   &:before {
     content: @icon-rss;
+  }
+
+  &:hover {
+    background-color: #f7941e;
   }
 }
 
@@ -1685,11 +1734,19 @@
   &:before {
     content: @icon-linkedin;
   }
+
+  &:hover {
+    background-color: #0078b6;
+  }
 }
 
 .icon-coursera {
   &:before {
     content: @icon-coursera;
+  }
+
+  &:hover {
+    background-color: #408bc9;
   }
 }
 
@@ -1697,11 +1754,19 @@
   &:before {
     content: @icon-video;
   }
+
+  &:hover {
+    background-color: #439639;
+  }
 }
 
 .icon-conversation {
   &:before {
     content: @icon-conversation;
+  }
+
+  &:hover {
+    background-color: #d7352a;
   }
 }
 
@@ -1709,17 +1774,29 @@
   &:before {
     content: @icon-vimeo;
   }
+
+  &:hover {
+    background-color: #d12223;
+  }
 }
 
 .icon-youtube {
   &:before {
     content: @icon-youtube;
   }
+
+  &:hover {
+    background-color: #d12223;
+  }
 }
 
 .icon-phone {
   &:before {
     content: @icon-phone;
+  }
+
+  &:hover {
+    background-color: @ku-red;
   }
 }
 
@@ -1738,6 +1815,10 @@
 .icon-ku-logo {
   &:before {
     content: @icon-ku-logo;
+  }
+
+  &:hover {
+    background-color: @ku-red;
   }
 }
 
