--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -60,41 +60,41 @@
             <li role="menuitem"><a href="http://informationssikkerhed.ku.dk">Informationssikkerhed</a></li>
             <li><a href="http://velkommen.ku.dk/indeks">A-Å-indeks</a></li>
           </ul>
-            <h3 data-heading="open" class="footer-heading">Mød KU på</h3>
-            <div class="social-items">
-              <div class="social-item">
-                <a target="_blank" href="https://www.facebook.com/universitet" class="icon icon-facebook" title="Facebook"></a>
-              </div>
-              <div class="social-item">
-                <a target="_blank" href="https://www.linkedin.com/edu/k%C3%B8benhavns-universitet-12012" class="icon icon-linkedin" title="LinkedIn"></a>
-              </div>
-              <div class="social-item">
-                <a target="_blank" href="https://www.instagram.com/university_of_copenhagen/" class="icon icon-instagram" title="Instagram"></a>
-              </div>
-              <div class="social-item">
-                <a target="_blank" href="https://twitter.com/koebenhavns_uni" class="icon icon-twitter" title="Twitter"></a>
-              </div>
-              <div class="social-item">
-                <a target="_blank" href="http://velkommen.ku.dk/apps" class="icon icon-phone" title="KU Apps"></a>
-              </div>
-              <div class="social-item">
-                <a target="_blank" href="http://nyheder.ku.dk/rss/" class="icon icon-rss" title="RSS"></a>
-              </div>
-              <div class="social-item">
-                <a target="_blank" href="https://www.youtube.com/user/CopenhagenUniversity" class="icon icon-youtube" title="YouTube"></a>
-              </div>
-              <div class="social-item">
-                <a target="_blank" href="http://www.futurity.org/university/university-of-copenhagen" class="icon icon-futurity" title="futurity"></a>
-              </div>
-              <div class="social-item">
-                <a target="_blank" href="http://theconversation.com/institutions/university-of-copenhagen" class="icon icon-conversation" title="The Conversation"></a>
-              </div>
-              <div class="social-item">
-                <a target="_blank" href="https://www.coursera.org/ucph" class="icon icon-coursera" title="Coursera"></a>
-              </div>
-              <div class="social-item">
-                <a target="_blank" href="http://video.ku.dk" class="icon icon-video" title="KU Videoportal"></a>
-              </div>
+          <h3 data-heading="open" class="footer-heading">Mød KU på</h3>
+          <div class="social-items">
+            <div class="social-item">
+              <a target="_blank" href="https://www.facebook.com/universitet" class="icon icon-facebook" title="Facebook"></a>
+            </div>
+            <div class="social-item">
+              <a target="_blank" href="https://www.linkedin.com/edu/k%C3%B8benhavns-universitet-12012" class="icon icon-linkedin" title="LinkedIn"></a>
+            </div>
+            <div class="social-item">
+              <a target="_blank" href="https://www.instagram.com/university_of_copenhagen/" class="icon icon-instagram" title="Instagram"></a>
+            </div>
+            <div class="social-item">
+              <a target="_blank" href="https://twitter.com/koebenhavns_uni" class="icon icon-twitter" title="Twitter"></a>
+            </div>
+            <div class="social-item">
+              <a target="_blank" href="http://velkommen.ku.dk/apps" class="icon icon-phone" title="KU Apps"></a>
+            </div>
+            <div class="social-item">
+              <a target="_blank" href="http://nyheder.ku.dk/rss/" class="icon icon-rss" title="RSS"></a>
+            </div>
+            <div class="social-item">
+              <a target="_blank" href="https://www.youtube.com/user/CopenhagenUniversity" class="icon icon-youtube" title="YouTube"></a>
+            </div>
+            <div class="social-item">
+              <a target="_blank" href="http://www.futurity.org/university/university-of-copenhagen" class="icon icon-futurity" title="futurity"></a>
+            </div>
+            <div class="social-item">
+              <a target="_blank" href="http://theconversation.com/institutions/university-of-copenhagen" class="icon icon-conversation" title="The Conversation"></a>
+            </div>
+            <div class="social-item">
+              <a target="_blank" href="https://www.coursera.org/ucph" class="icon icon-coursera" title="Coursera"></a>
+            </div>
+            <div class="social-item">
+              <a target="_blank" href="http://video.ku.dk" class="icon icon-video" title="KU Videoportal"></a>
+            </div>
           </div>
         </div>
       </div>
@@ -102,7 +102,7 @@
   </div>
 </footer>
 <script>
-    var pageTitle = 'Titel';
+  var pageTitle = 'Titel';
 </script>
 <script src="https://bootstrap.secure.ku.dk/scripts/valid_search_engines_da.js"></script>
 {% if site.github %}
@@ -115,38 +115,45 @@
 <script src="{{ site.baseurl }}/assets/js/docs.min.js"></script>
 <!-- //Documentation extra - not for production -->
 <script src="{{ site.baseurl }}/assets/js/ku-mobile-menu.js"></script>
-{% endif %}
-{% if page.slug == "examples" %}
+{% endif %} {% if page.slug == "examples" %}
 <script src="{{ site.baseurl }}/assets/js/mmenu/jquery.mmenu.all.min.js"></script>
 <script src="{{ site.baseurl }}/custom/ku-mobile-menu.js"></script>
-{% endif %}
-{% if page.category == "kurser" %}
+{% endif %} {% if page.category == "kurser" %}
 <!-- Kurser.ku.dk -->
 <script src="../../assets/js/kurser.ku.dk/kurser.min.js"></script>
-{% endif %}
-{% else %}
+{% endif %} {% else %}
 <script src="../../dist/js/bootstrap.js"></script>
 <script src="../../assets/js/mmenu/jquery.mmenu.all.min.js"></script>
 <script src="../../custom/ku-mobile-menu.js"></script>
 <script src="../../assets/js/ku-global-search/search.js"></script>
 {% if page.slug != "examples" %}
 <script src="https://nanna-dk.github.io/ku.dk-bootstrap/assets/js/docs.min.js"></script>
-{% endif %}
-{% if page.category == "kurser" %}
+{% endif %} {% if page.category == "kurser" %}
 <!-- Kurser.ku.dk -->
 <script src="../../assets/js/kurser.ku.dk/kurser.js"></script>
-{% endif %}
-{% endif %}
+{% endif %} {% endif %}
+
 <script>
-// Only use under development - set active left menu item
-$(function(){
-    var current = location.pathname;
-    $('.ku-docs #leftmenu li a').each(function(){
+  // Only use under development - set active left menu item
+  $(function() {
+    setActiveLinks();
+    // $('#leftmenu li a').click(function() {
+    //   setActiveLinks();
+    // });
+
+    function setActiveLinks() {
+      var current = location.pathname;
+      $('#leftmenu:not(.exclude) li a').each(function() {
         var $this = $(this);
+        $this.removeClass('active');
         // if the current path is like this link, make it active
-        if($this.attr('href').replace('..', '/examples').indexOf(current) !== -1){
-            $this.parent().addClass('active');
+        var $templateLink = $this.attr('href').replace('..', '/examples').indexOf(current) !== -1;
+        // Get hash value
+        var $hash = location.href.substr(location.href.indexOf('#') + 1);
+        if ($templateLink === true || $this.attr('href') == '#' + $hash) {
+          $this.parent().addClass('active');
         }
-    })
-})
+      })
+    }
+  })
 </script>
