--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -15,12 +15,9 @@
     </div>
     <div class="container bs-docs-container">
       <div class="row">
-        <div class="col-md-{% if page.fullwidth == true %}12{% else %}9{% endif %}" role="main">
-          {{ content }}
-        </div>
         {% unless page.fullwidth == true %}
         <div class="col-md-3" role="complementary">
-          <nav class="bs-docs-sidebar hidden-print hidden-xs hidden-sm">
+          <nav id="leftmenu" class="bs-docs-sidebar hidden-print hidden-xs hidden-sm">
             <ul class="nav bs-docs-sidenav">
               {% if page.slug == "getting-started" %}
                 {% include nav/getting-started.html %}
@@ -41,6 +38,9 @@
           </nav>
         </div>
         {% endunless %}
+        <div class="col-md-{% if page.fullwidth == true %}12{% else %}9{% endif %}" role="main">
+          {{ content }}
+        </div>
       </div>
     </div>
   </main>
