--- a/docs/assets/css/src/docs.css
+++ b/docs/assets/css/src/docs.css
@@ -514,7 +514,7 @@ h4 code {
  */
 
 /* By default it's not affixed in mobile views, so undo that */
-.bs-docs-sidebar.affix {
+/*.bs-docs-sidebar.affix {
   position: static;
 }
 @media (min-width: 768px) {
@@ -523,62 +523,59 @@ h4 code {
     padding-left: 20px;
     background-color: #fff;
   }
-}
+}*/
 
 /* First level of nav */
 .bs-docs-sidenav {
-  margin-top: 20px;
+  /*margin-top: 20px;*/
   margin-bottom: 20px;
 }
 
 /* All levels of nav */
 .bs-docs-sidebar .nav > li > a {
   display: block;
-  padding: 4px 20px;
+  padding: 4px 10px 4px 0;
   font-size: 13px;
   font-weight: 500;
-  color: #767676;
+  color: #252525;
 }
 .bs-docs-sidebar .nav > li > a:hover,
 .bs-docs-sidebar .nav > li > a:focus {
-  padding-left: 19px;
+  /*padding-left: 19px;*/
   color: #901a1e;
-  text-decoration: none;
+  /*text-decoration: none;
   background-color: transparent;
-  border-left: 1px solid #901a1e;
+  border-left: 1px solid #901a1e;*/
 }
 .bs-docs-sidebar .nav > .active > a,
 .bs-docs-sidebar .nav > .active:hover > a,
 .bs-docs-sidebar .nav > .active:focus > a {
-  padding-left: 18px;
+  /*padding-left: 18px;*/
   font-weight: bold;
   color: #901a1e;
   background-color: transparent;
-  border-left: 2px solid #901a1e;
+  /*border-left: 2px solid #901a1e;*/
 }
 
 /* Nav: second level (shown on .active) */
 .bs-docs-sidebar .nav .nav {
-  display: none; /* Hide by default, but at >768px, show it */
+  /*display: none; /* Hide by default, but at >768px, show it */
   padding-bottom: 10px;
 }
 .bs-docs-sidebar .nav .nav > li > a {
   padding-top: 1px;
   padding-bottom: 1px;
-  padding-left: 30px;
+  padding-left: 10px;
   font-size: 12px;
   font-weight: normal;
 }
-.bs-docs-sidebar .nav .nav > li > a:hover,
-.bs-docs-sidebar .nav .nav > li > a:focus {
-  padding-left: 29px;
-}
-.bs-docs-sidebar .nav .nav > .active > a,
+
+/*.bs-docs-sidebar .nav .nav > .active > a,
 .bs-docs-sidebar .nav .nav > .active:hover > a,
 .bs-docs-sidebar .nav .nav > .active:focus > a {
   padding-left: 28px;
   font-weight: 500;
-}
+}*/
 
 /* Back to top (hidden on mobile) */
 /*.back-to-top,
@@ -608,35 +605,35 @@ h4 code {
 }*/
 
 /* Show and affix the side nav when space allows it */
-@media (min-width: 992px) {
+/*@media (min-width: 992px) {
   .bs-docs-sidebar .nav > .active > ul {
     display: block;
-  }
-  /* Widen the fixed sidebar */
-  .bs-docs-sidebar.affix,
+  }*/
+/* Widen the fixed sidebar */
+/*.bs-docs-sidebar.affix,
   .bs-docs-sidebar.affix-bottom {
     width: 213px;
   }
   .bs-docs-sidebar.affix {
     position: fixed; /* Undo the static from mobile first approach */
-    top: 20px;
+/*top: 20px;
   }
   .bs-docs-sidebar.affix-bottom {
     position: absolute; /* Undo the static from mobile first approach */
-  }
+/*}
   .bs-docs-sidebar.affix-bottom .bs-docs-sidenav,
   .bs-docs-sidebar.affix .bs-docs-sidenav {
     margin-top: 0;
     margin-bottom: 0;
   }
 }
-@media (min-width: 1200px) {
-  /* Widen the fixed sidebar again */
-  .bs-docs-sidebar.affix-bottom,
+@media (min-width: 1200px) {*/
+/* Widen the fixed sidebar again */
+/*.bs-docs-sidebar.affix-bottom,
   .bs-docs-sidebar.affix {
     width: 263px;
   }
-}
+}*/
 
 
 /*
