--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -13,7 +13,10 @@
 
   .media {
     padding-bottom: 10px;
-    border-bottom: 1px solid @gray;
+
+    .ku-bs & {
+      border-bottom: 1px solid @gray;
+    }
 
     .media-heading {
       .nyhedsoverskrift();
