--- a/docs/_includes/nav/components.html
+++ b/docs/_includes/nav/components.html
@@ -113,6 +113,14 @@
   </ul>
 </li>
 <li>
+  <a href="#advanced-lists">KU advanced lists</a>
+  <ul class="nav">
+    <li><a href="#advanced-lists-default">Default advanced lists</a></li>
+    <li><a href="#advanced-lists-left">Advanced lists with left image</a></li>
+  </ul>
+</li>
+<li>
+<li>
   <a href="#media">Media object</a>
   <ul class="nav">
     <li><a href="#media-default">Default media</a></li>
