--- a/docs/_includes/components/advanced-lists.html
+++ b/docs/_includes/components/advanced-lists.html
@@ -23,63 +23,61 @@
     </ul>
   </div>
   {% highlight html %}
-<ul class="advanced-list">
-  <li>
-    <div class="list-content">
-      <h4 class="list-header">List item without link</h4>
-      Content text.
-    </div>
-    <div class="list-img" style="background-image: url('https://placehold.it/250x110?text=250x110')"></div>
-  </li>
-  <li>
-    <a href="#" class="advanced-link">
-      <div class="list-content">
-        <h4 class="list-header">List item with link</h4>
-        Content text.
-      </div>
-      <div class="list-img" style="background-image: url('https://placehold.it/250x110?text=250x110')"></div>
-    </a>
-  </li>
-</ul>
-  {% endhighlight %}
-
-  <h2 id="advanced-lists-left">Advanced lists with left-aligned image</h2>
-  <p>Add the class <code>.left</code> to the list like this: <code>&lt;ul class=&quot;advanced-list left&quot;&gt;...&lt;/ul&gt;</code></p>
-  <div class="bs-example" data-example-id="advanced-lists-left">
-  <ul class="advanced-list left">
+  <ul class="advanced-list">
     <li>
       <div class="list-content">
-        <h4 class="list-header">List item without link</h4> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus placerat augue diam, id ornare neque mollis eu. Vivamus semper diam urna, in maximus felis sollicitudin eget.
+        <h4 class="list-header">List item without link</h4> Content text.
       </div>
       <div class="list-img" style="background-image: url('https://placehold.it/250x110?text=250x110')"></div>
     </li>
     <li>
       <a href="#" class="advanced-link">
         <div class="list-content">
-          <h4 class="list-header">List item with link</h4> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus placerat augue diam, id ornare neque mollis eu. Vivamus semper diam urna, in maximus felis sollicitudin eget. Vivamus sed mi at nunc condimentum placerat. Aenean eget gravida
-          sem. Vestibulum mollis eros non fermentum rhoncus.
+          <h4 class="list-header">List item with link</h4> Content text.
         </div>
         <div class="list-img" style="background-image: url('https://placehold.it/250x110?text=250x110')"></div>
       </a>
     </li>
   </ul>
+  {% endhighlight %}
+
+  <h2 id="advanced-lists-left">Advanced lists with left-aligned image</h2>
+  <p>Add the class <code>.img-left</code> to the list like this: <code>&lt;ul class=&quot;advanced-list img-left&quot;&gt;...&lt;/ul&gt;</code></p>
+  <div class="bs-example" data-example-id="advanced-lists-left">
+    <ul class="advanced-list img-left">
+      <li>
+        <div class="list-content">
+          <h4 class="list-header">List item without link</h4> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus placerat augue diam, id ornare neque mollis eu. Vivamus semper diam urna, in maximus felis sollicitudin eget.
+        </div>
+        <div class="list-img" style="background-image: url('https://placehold.it/250x110?text=250x110')"></div>
+      </li>
+      <li>
+        <a href="#" class="advanced-link">
+          <div class="list-content">
+            <h4 class="list-header">List item with link</h4> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus placerat augue diam, id ornare neque mollis eu. Vivamus semper diam urna, in maximus felis sollicitudin eget. Vivamus sed mi at nunc condimentum placerat. Aenean eget gravida
+            sem. Vestibulum mollis eros non fermentum rhoncus.
+          </div>
+          <div class="list-img" style="background-image: url('https://placehold.it/250x110?text=250x110')"></div>
+        </a>
+      </li>
+    </ul>
   </div>
   {% highlight html %}
-<ul class="advanced-list left">
-  <li>
-    <div class="list-content">
-      <h4 class="list-header">List item without link</h4> Content text.
-    </div>
-    <div class="list-img" style="background-image: url('https://placehold.it/250x110?text=250x110')"></div>
-  </li>
-  <li>
-    <a href="#" class="advanced-link">
+  <ul class="advanced-list img-left">
+    <li>
       <div class="list-content">
-        <h4 class="list-header">List item with link</h4> Content text.
+        <h4 class="list-header">List item without link</h4> Content text.
       </div>
       <div class="list-img" style="background-image: url('https://placehold.it/250x110?text=250x110')"></div>
-    </a>
-  </li>
-</ul>
+    </li>
+    <li>
+      <a href="#" class="advanced-link">
+        <div class="list-content">
+          <h4 class="list-header">List item with link</h4> Content text.
+        </div>
+        <div class="list-img" style="background-image: url('https://placehold.it/250x110?text=250x110')"></div>
+      </a>
+    </li>
+  </ul>
   {% endhighlight %}
 </div>
