--- a/less/ku-advanced-lists.less
+++ b/less/ku-advanced-lists.less
@@ -11,7 +11,6 @@
     min-height: 80px;
     background-color: @gray-f5;
     zoom: 1;
-    &:extend(.clearfix all);
 
     .list-img {
       display: none;
@@ -52,7 +51,7 @@
       margin-top: 5px;
     }
   }
-  &.left {
+  &.img-left {
     .list-content {
       order: 2;
     }
