--- a/less/ku-advanced-lists.less
+++ b/less/ku-advanced-lists.less
@@ -10,6 +10,7 @@
     display: flex;
     min-height: 80px;
     background-color: @gray-f5;
+    border-radius: @border-radius-base;
     zoom: 1;
 
     .list-img {
@@ -51,6 +52,7 @@
       margin-top: 5px;
     }
   }
+
   &.img-left {
     .list-content {
       order: 2;
