--- a/less/variables.less
+++ b/less/variables.less
@@ -642,21 +642,21 @@
 //
 //## Define colors for form feedback states and, by default, alerts.
 
-@state-success-text:             #1a321a;
-@state-success-bg:               #85ae33;
-@state-success-border:           #889a2d;
+@state-success-text:             #454e32;
+@state-success-bg:               #e0eacc;
+@state-success-border:           #b9c89b;
 
-@state-info-text:                @white-color;
-@state-info-bg:                  #7ea5a8;
-@state-info-border:              #699a95;
+@state-info-text:                #3f6265;
+@state-info-bg:                  #e2edee;
+@state-info-border:              #bcd9dc;
 
 @state-warning-text:             #6d501d;
-@state-warning-bg:               #faebcc;
-@state-warning-border:           #fbe4b4;
+@state-warning-bg:               #ffdec0;
+@state-warning-border:           #dbbea3;
 
 @state-danger-text:              #7b161a;
-@state-danger-bg:                #f2dede;
-@state-danger-border:            #ebccd1;
+@state-danger-bg:                #e3c6c7;
+@state-danger-border:            #c7a2a4;
 
 
 //== Tooltips
